# sdl2

./: SDL_config.h.meson  meson.build  upstream.wrap
src/: meson.build
src/atomic/: meson.build
src/audio/: meson.build
src/audio/emscripten/: meson.build
src/audio/haiku/: meson.build
src/audio/jack/: meson.build
src/audio/nacl/: meson.build
src/audio/netbsd/: meson.build
src/audio/wasapi/: meson.build
src/core/: meson.build
src/core/android/: meson.build
src/core/linux/: meson.build
src/core/windows/: meson.build
src/core/winrt/: meson.build
src/events/: meson.build
src/filesystem/: meson.build
src/filesystem/android/: meson.build
src/filesystem/cocoa/: meson.build
src/filesystem/haiku/: meson.build
src/filesystem/nacl/: meson.build
src/filesystem/winrt/: meson.build
src/haptic/: meson.build
src/haptic/windows/: meson.build
src/joystick/: meson.build
src/joystick/haiku/: meson.build
src/joystick/hidapi/: meson.build
src/joystick/steam/: meson.build
src/joystick/windows/: meson.build
src/loadso/: meson.build
src/main/: meson.build
src/main/android/: meson.build
src/main/haiku/: meson.build
src/main/nacl/: meson.build
src/main/psp/: meson.build
src/main/windows/: meson.build
src/main/winrt/: meson.build
src/power/: meson.build
src/power/emscripten/: meson.build
src/power/uikit/: meson.build
src/power/winrt/: meson.build
src/render/: meson.build
src/render/direct3d/: meson.build
src/render/direct3d11/: meson.build
src/render/metal/: meson.build
src/render/software/: meson.build
src/sensor/: meson.build
src/sensor/android/: meson.build
src/sensor/coremotion/: meson.build
src/sensor/dummy/: meson.build
src/stdlib/: meson.build
src/test/: meson.build
src/thread/generic/: meson.build
src/thread/psp/: meson.build
src/thread/stdcpp/: meson.build
src/thread/windows/: meson.build
src/timer/: meson.build
src/timer/windows/: meson.build
src/video/: meson.build
src/video/android/: meson.build
src/video/cocoa/: meson.build
src/video/directfb/: meson.build
src/video/dummy/: meson.build
src/video/emscripten/: meson.build
src/video/haiku/: meson.build
src/video/kmsdrm/: meson.build
src/video/mir/: meson.build
src/video/nacl/: meson.build
src/video/psp/: meson.build
src/video/qnx/: meson.build
src/video/raspberry/: meson.build
src/video/uikit/: meson.build
src/video/vivante/: meson.build
src/video/wayland/: meson.build
src/video/winrt/: meson.build
src/video/x11/: meson.build
