all_sources += files(
  'SDL.c',
  'SDL_assert.c',
  'SDL_dataqueue.c',
  'SDL_error.c',
  'SDL_hints.c',
  'SDL_log.c',
)

subdir('atomic')
subdir('audio')
subdir('core')
subdir('cpuinfo')
subdir('dynapi')
subdir('events')
subdir('file')
subdir('filesystem')
subdir('haptic')
subdir('joystick')
subdir('libm')
subdir('loadso')
subdir('main')
subdir('power')
subdir('render')
subdir('stdlib')
subdir('test')
subdir('thread')
subdir('timer')
subdir('video')
subdir('video/yuv2rgb') # This is what's done in the CMakeLists.txt
